# MotorController

./: CMakeLists.txt  MotorControllerNode.mc3  as5048a.c  as5048a.h  clarke.h  linear_interpolate.c.tmplate  main.asm  main.c  math_utils.h  motor_controller.ncf  park.h  pid.h  space_vector_modulation.h
MotorControllerNode.X/nbproject/: configurations.xml  project.xml
include/: igbt_thermistor.h
mcc_generated_files/: adc1.c  adc1.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h  pwm.c  pwm.h  spi2.c  spi2.h
nbproject/: configurations.xml  project.xml
src/: main.c
